--- a/static/css/vars/globals.css
+++ b/static/css/vars/globals.css
@@ -1,135 +1,157 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
-html, body {
-   font-family: 'Poppins', sans-serif;
+html,
+body {
+  font-family: "Poppins", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: #2c3e50;
+  scroll-behavior: unset !important;
 }
 * {
- transition: all 0.3s linear;
+  transition: all 0.3s linear;
 }
 a {
- text-decoration: none !important;
+  text-decoration: none !important;
 }
 .heading {
-   padding-top: 250px;
-   padding-bottom: 150px;
-   position: relative;
-   z-index: 1;
-   background-color: #20262a;
-   margin-top:0;
-   padding-right: 30px;
-   margin-bottom: 0px;
-   padding-left: 30px;
-   text-align: center;
+  padding-top: 250px;
+  padding-bottom: 150px;
+  position: relative;
+  z-index: 1;
+  background-color: #20262a;
+  margin-top: 0;
+  padding-right: 30px;
+  margin-bottom: 0px;
+  padding-left: 30px;
+  text-align: center;
 }
 .heading h3 {
-   font-weight: 900;
-   margin: 10px 0 15px;
-   font-size: 45px;
-   letter-spacing: -1px;
-   color: #fff;
-   line-height: 52px;
-   text-align: center;
+  font-weight: 900;
+  margin: 10px 0 15px;
+  font-size: 45px;
+  letter-spacing: -1px;
+  color: #fff;
+  line-height: 52px;
+  text-align: center;
 }
 .section-title h2 {
- position: relative;
- padding-bottom: 15px;
+  position: relative;
+  padding-bottom: 15px;
 }
 
 .section-title h2::after {
- content: '';
- width: 80px;
- height: 3px;
- background-color: var(--main-color);
- position: absolute;
- bottom: 0;
- left: calc(50% - 40px);
+  content: "";
+  width: 80px;
+  height: 3px;
+  background-color: var(--main-color);
+  position: absolute;
+  bottom: 0;
+  left: calc(50% - 40px);
 }
 .heading .breadcrumb {
-   display: flex;
-   justify-content: center;
+  display: flex;
+  justify-content: center;
 }
-.heading a{
-   font-size: 18px;
-   font-weight: 400;
-   line-height: 28.8px;
-   color: #fff;
-   text-decoration: none;
-   display: inline-block;
-   margin: 0 10px;
+.heading a {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 28.8px;
+  color: #fff;
+  text-decoration: none;
+  display: inline-block;
+  margin: 0 10px;
 }
 .heading a:hover {
-   color: var(--main-color);
+  color: var(--main-color);
 }
 
 section {
- position: relative;
- overflow: hidden;
- padding-top: 70px;
- padding-bottom: 45px;
- background-size: cover;
- background-repeat: no-repeat;
- background-position: 50%;
- background-attachment: fixed;
+  position: relative;
+  overflow: hidden;
+  padding-top: 70px;
+  padding-bottom: 45px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 50%;
+  background-attachment: fixed;
 }
 .pb-70 {
- padding-bottom: 70px !important;
+  padding-bottom: 70px !important;
 }
 .pt-100 {
- padding-top: 100px !important;
+  padding-top: 100px !important;
 }
 .pagination-area {
-   margin-top: 10px;
-   margin-bottom: 30px;
+  margin-top: 10px;
+  margin-bottom: 30px;
 }
 .pagination-area .page-numbers {
-   width: 40px;
-   height: 40px;
-   line-height: 40px;
-   color: var(--main-color);
-   background-color: transparent;
-   border: 1px solid var(--main-color);
-   text-align: center;
-   display: inline-block;
-   position: relative;
-   margin-left: 3px;
-   margin-right: 3px;
-   font-size: 18px;
-   border-radius: 5px;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  color: var(--main-color);
+  background-color: transparent;
+  border: 1px solid var(--main-color);
+  text-align: center;
+  display: inline-block;
+  position: relative;
+  margin-left: 3px;
+  margin-right: 3px;
+  font-size: 18px;
+  border-radius: 5px;
 }
 .pagination-area .page-numbers.current,
 .pagination-area .page-numbers:hover {
-   background-color: var(--main-color);
-   color: #fff;
+  background-color: var(--main-color);
+  color: #fff;
 }
 .pagination-area .page-numbers svg {
-   position: relative;
-   font-size: 20px;
+  position: relative;
+  font-size: 20px;
 }
 
 .imgo {
-   height: auto !important;
+  height: auto !important;
 }
 
 .english {
-   direction: ltr;
-   text-align: left;
+  direction: ltr;
+  text-align: left;
 }
 .arabic {
-   direction: rtl;
-   text-align: right;
+  direction: rtl;
+  text-align: right;
 }
 
 .footerLinks {
-   display: flex;
-   justify-content: center;
-   gap: 10px;
-   margin-top: 10px;
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  margin-top: 10px;
 }
 
 .footerLinks li a {
-   color: #fff;
+  color: #fff;
+}
+
+.slick-prev::before,
+.slick-next::before {
+  font-family: "slick";
+  font-size: 20px;
+  line-height: 1;
+  opacity: 0.75;
+  color: #fff;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: #000;
+  padding: 10px;
+}
+
+.slick-prev {
+  left: 0;
+  z-index: 2;
+}
+.slick-next {
+  right: 0px !important;
 }
